--- a/assets/main.css
+++ b/assets/main.css
@@ -400,8 +400,8 @@ body.is-instant::after {
 }
 
 .image-component.instance-2 > .frame {
-	width: 71.875rem;
-	height: 18rem;
+	width: 27.625rem;
+	height: 50rem;
 	border-radius: 0.375rem;
 	transition: none;
 }
@@ -409,7 +409,7 @@ body.is-instant::after {
 .image-component.instance-2 > .frame > img {
 	height: 100% !important;
 	object-fit: cover;
-	object-position: left;
+	object-position: top left;
 	width: 100% !important;
 	-webkit-touch-callout: none;
 	user-select: none;
@@ -430,7 +430,7 @@ body.is-instant::after {
 
 .image-component.instance-9 > .frame {
 	width: 71.875rem;
-	height: 18rem;
+	height: 35rem;
 	border-radius: 0.375rem;
 	transition: none;
 }
@@ -438,7 +438,7 @@ body.is-instant::after {
 .image-component.instance-9 > .frame > img {
 	height: 100% !important;
 	object-fit: cover;
-	object-position: left;
+	object-position: top left;
 	width: 100% !important;
 	-webkit-touch-callout: none;
 	user-select: none;
@@ -1022,7 +1022,7 @@ body.is-instant::after {
 	font-family: "Monomaniac One", system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 	letter-spacing: -0.1rem;
 	width: 100%;
-	font-size: 4em;
+	font-size: 3em;
 	line-height: 1.25;
 	font-weight: 400;
 }
@@ -1078,6 +1078,43 @@ body.is-instant::after {
 
 .text-component.instance-15 {
 	text-align: justify;
+}
+
+.text-component.instance-65 {
+	text-align: justify;
+}
+
+.text-component.style-420 {
+	text-transform: uppercase;
+	color: #E3B02D;
+	font-family: 'Monomaniac One', cursive;
+	letter-spacing: -0.1rem;
+	width: 100%;
+	font-size: 1.875em;
+	line-height: 1.25;
+	font-weight: 400;
+}
+
+.text-component.style-420 code {
+	color: #EBEBEB;
+	background-color: transparent;
+}
+
+.text-component.style-420 mark {
+	color: #EBFF00;
+	background-color: transparent;
+}
+
+.text-component.style-420 a {
+	text-decoration: none;
+}
+
+.text-component.style-420 a:hover {
+	text-decoration: underline;
+}
+
+.text-component.style-420 span.p:nth-child(n + 2) {
+	margin-top: 1rem;
 }
 
 .text-component.instance-65 {
@@ -1640,6 +1677,159 @@ body.touch .container-component.style-3 {
 
 .container-component.instance-6 > .wrapper > .inner > :nth-child(2) {
 	width: calc(50% + (var(--gutters) / 2));
+}
+
+.container-component.style-420 {
+	--alignment: left;
+	--flex-alignment: flex-start;
+	--indent-left: 1;
+	--indent-right: 0;
+	--margin-left: 0;
+	--margin-right: auto;
+	display: flex;
+	width: 100%;
+	align-items: flex-start;
+	justify-content: center;
+	background-color: #F0F0F0;
+}
+
+.container-component.style-420:not(:first-child) {
+	margin-top: 0rem !important;
+}
+
+.container-component.style-420:not(:last-child) {
+	margin-bottom: 0rem !important;
+}
+
+.container-component.style-420 > .wrapper > .inner {
+	--gutters: 8rem;
+	--padding-vertical: 2rem;
+	--spacing: 2rem;
+	padding: var(--padding-vertical) var(--padding-horizontal);
+}
+
+.container-component.style-420 > .wrapper {
+	max-width: 100%;
+	width: 100%;
+}
+
+.container-component.style-420.default > .wrapper > .inner > * {
+	margin-bottom: var(--spacing);
+	margin-top: var(--spacing);
+}
+
+.container-component.style-420.default > .wrapper > .inner > *:first-child {
+	margin-top: 0 !important;
+}
+
+.container-component.style-420.default > .wrapper > .inner > *:last-child {
+	margin-bottom: 0 !important;
+}
+
+.container-component.style-420.columns > .wrapper > .inner {
+	flex-wrap: wrap;
+	display: flex;
+	align-items: flex-start;
+}
+
+.container-component.style-420.columns > .wrapper > .inner > * {
+	flex-grow: 0;
+	flex-shrink: 0;
+	max-width: 100%;
+	text-align: var(--alignment);
+	padding: 0 0 0 var(--gutters);
+}
+
+.container-component.style-420.columns > .wrapper > .inner > * > * {
+	margin-bottom: var(--spacing);
+	margin-top: var(--spacing);
+}
+
+.container-component.style-420.columns > .wrapper > .inner > * > *:first-child {
+	margin-top: 0 !important;
+}
+
+.container-component.style-420.columns > .wrapper > .inner > * > *:last-child {
+	margin-bottom: 0 !important;
+}
+
+.container-component.style-420.columns > .wrapper > .inner > *:first-child {
+	margin-left: calc(var(--gutters) * -1);
+}
+
+.container-component.style-420.default > .wrapper > .inner > .full {
+	margin-left: calc(var(--padding-horizontal) * -1);
+	max-width: none !important;
+	width: calc(100% + (var(--padding-horizontal) * 2) + 0.4725px);
+}
+
+.container-component.style-420.default > .wrapper > .inner > .full:first-child {
+	margin-top: calc(var(--padding-vertical) * -1) !important;
+	border-top-left-radius: inherit;
+	border-top-right-radius: inherit;
+}
+
+.container-component.style-420.default > .wrapper > .inner > .full:last-child {
+	margin-bottom: calc(var(--padding-vertical) * -1) !important;
+	border-bottom-left-radius: inherit;
+	border-bottom-right-radius: inherit;
+}
+
+.container-component.style-420.columns > .wrapper > .inner > div > .full {
+	margin-left: calc(var(--gutters) * -0.5);
+	max-width: none !important;
+	width: calc(100% + var(--gutters) + 0.4725px);
+}
+
+.container-component.style-420.columns > .wrapper > .inner > div:first-child > .full {
+	margin-left: calc(var(--padding-horizontal) * -1);
+	width: calc(100% + var(--padding-horizontal) + calc(var(--gutters) * 0.5) + 0.4725px);
+}
+
+.container-component.style-420.columns > .wrapper > .inner > div:last-child > .full {
+	width: calc(100% + var(--padding-horizontal) + calc(var(--gutters) * 0.5) + 0.4725px);
+}
+
+.container-component.style-420.columns > .wrapper > .inner > div > .full:first-child {
+	margin-top: calc(var(--padding-vertical) * -1) !important;
+}
+
+.container-component.style-420.columns > .wrapper > .inner > div > .full:last-child {
+	margin-bottom: calc(var(--padding-vertical) * -1) !important;
+}
+
+.container-component.style-420.columns > .wrapper > .inner > div:first-child, .container-component.style-420.columns > .wrapper > .inner > div:first-child > .full:first-child {
+	border-top-left-radius: inherit;
+}
+
+.container-component.style-420.columns > .wrapper > .inner > div:last-child, .container-component.style-420.columns > .wrapper > .inner > div:last-child > .full:first-child {
+	border-top-right-radius: inherit;
+}
+
+.container-component.style-420.columns > .wrapper > .inner > .full {
+	align-self: stretch;
+}
+
+.container-component.style-420.columns > .wrapper > .inner > .full:first-child {
+	border-bottom-left-radius: inherit;
+	border-top-left-radius: inherit;
+}
+
+.container-component.style-420.columns > .wrapper > .inner > .full:last-child {
+	border-bottom-right-radius: inherit;
+	border-top-right-radius: inherit;
+}
+
+.container-component.style-420.columns > .wrapper > .inner > .full > .full:first-child:last-child {
+	border-radius: inherit;
+	height: calc(100% + (var(--padding-vertical) * 2));
+}
+
+.container-component.style-420.columns > .wrapper > .inner > .full > .full:first-child:last-child > * {
+	border-radius: inherit;
+	height: 100%;
+	position: absolute;
+	width: 100%;
 }
 
 .container-component.style-10 {
@@ -3814,7 +4004,99 @@ body.touch .container-component.style-4 {
 	.container-component.style-2.columns > .wrapper > .inner > .full > .full:first-child:last-child.slideshow .bg {
 		min-height: 35rem;
 	}
+
+	.container-component.style-420.columns > .wrapper > .inner {
+		flex-direction: column-reverse !important;
+		flex-wrap: nowrap !important;
+	}
 	
+	.container-component.style-420.columns > .wrapper > .inner > span {
+		height: 0;
+		margin-top: calc(var(--padding-vertical) * -2);
+		pointer-events: none;
+		visibility: hidden;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > *:first-child {
+		margin-left: 0 !important;
+		padding-bottom: 0 !important;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > * {
+		padding: calc(var(--gutters) * 0.5) 0 !important;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > *:last-child {
+		padding-top: 0 !important;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > div > .full {
+		margin-left: calc(var(--padding-horizontal) * -1);
+		width: calc(100% + (var(--padding-horizontal) * 2) + 0.4725px);
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > div:first-of-type > .full {
+		margin-left: calc(var(--padding-horizontal) * -1);
+		width: calc(100% + (var(--padding-horizontal) * 2) + 0.4725px);
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > div:last-of-type > .full {
+		margin-left: calc(var(--padding-horizontal) * -1);
+		width: calc(100% + (var(--padding-horizontal) * 2) + 0.4725px);
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > div > .full:first-child {
+		margin-top: calc(var(--gutters) * -0.5) !important;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > div > .full:last-child {
+		margin-bottom: calc(var(--gutters) * -0.5) !important;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > div:last-of-type > .full:first-child {
+		margin-top: calc(var(--padding-vertical) * -1) !important;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > div:first-of-type > .full:last-child {
+		margin-bottom: calc(var(--padding-vertical) * -1) !important;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > div:last-of-type, .container-component.style-420.columns > .wrapper > .inner > div:last-of-type > .full:first-child {
+		border-top-left-radius: inherit;
+		border-top-right-radius: inherit;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > div:first-of-type, .container-component.style-420.columns > .wrapper > .inner > div:first-of-type > .full:last-child {
+		border-bottom-left-radius: inherit;
+		border-bottom-right-radius: inherit;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > div:last-of-type, .container-component.style-420.columns > .wrapper > .inner > div:last-of-type > .full:last-child {
+		border-bottom-right-radius: 0 !important;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > div:first-of-type, .container-component.style-420.columns > .wrapper > .inner > div:first-of-type > .full:first-child {
+		border-top-left-radius: 0 !important;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > .full > .full:first-child:last-child {
+		height: auto;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > .full > .full:first-child:last-child > * {
+		height: auto;
+		position: relative;
+		width: auto;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > .full > .full:first-child:last-child.image img {
+		max-height: 35rem;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > .full > .full:first-child:last-child.slideshow .bg {
+		min-height: 35rem;
+	}
+
 	.container-component.instance-6 > .wrapper > .inner > :nth-child(1) {
 		--alignment: center;
 		--flex-alignment: center;
@@ -4387,14 +4669,14 @@ body.touch .container-component.style-4 {
 	}
 	
 	.image-component.instance-2 > .frame {
-		width: 25.75rem;
-		height: 12.34375rem !important;
+		width: 27.625rem;
+		height: 37.5rem !important;
 	}
 	
 	.image-component.instance-2 > .frame > img {
 		height: 100% !important;
 		object-fit: cover;
-		object-position: left;
+		object-position: top left;
 		width: 100% !important;
 	}
 	
@@ -4414,7 +4696,7 @@ body.touch .container-component.style-4 {
 	.image-component.instance-9 > .frame > img {
 		height: 100% !important;
 		object-fit: cover;
-		object-position: left;
+		object-position: top left;
 		width: 100% !important;
 	}
 	
@@ -4600,6 +4882,13 @@ body.touch .container-component.style-4 {
 		background-size: auto 53.225%;
 	}
 	
+	.text-component.style-420 {
+		letter-spacing: 0rem;
+		width: 100%;
+		font-size: 2.5em;
+		line-height: 1.25;
+	}
+
 	.text-component.style-14 {
 		letter-spacing: 0.35rem;
 		width: calc(100% + 0.35rem);
@@ -4717,6 +5006,32 @@ body.touch .container-component.style-4 {
 		text-align: justify;
 	}
 	
+	.container-component.style-420:not(:first-child) {
+		margin-top: 0rem !important;
+	}
+	
+	.container-component.style-420:not(:last-child) {
+		margin-bottom: 0rem !important;
+	}
+	
+	.container-component.style-420 > .wrapper > .inner {
+		--gutters: 2rem;
+		--padding-vertical: 2.125rem;
+		--spacing: 2rem;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > * {
+		padding: calc(var(--gutters) * 0.5) 0 !important;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > .full > .full:first-child:last-child.image img {
+		max-height: none;
+	}
+	
+	.container-component.style-420.columns > .wrapper > .inner > .full > .full:first-child:last-child.slideshow .bg {
+		min-height: auto;
+	}
+
 	.container-component.style-3:not(:first-child) {
 		margin-top: 0rem !important;
 	}
@@ -5525,13 +5840,17 @@ body.touch .container-component.style-4 {
 	}
 	
 	.image-component.instance-2 > .frame {
-		height: 9.875rem !important;
+		height: 30rem !important;
 	}
 	
 	.image-component.instance-9 > .frame {
 		height: 9.875rem !important;
 	}
 	
+	.container-component.style-420 > .wrapper > .inner {
+		--spacing: 1.75rem;
+	}
+
 	.container-component.style-3 > .wrapper > .inner {
 		--spacing: 0rem;
 	}
@@ -5629,13 +5948,17 @@ body.touch .container-component.style-4 {
 	}
 	
 	.image-component.instance-2 > .frame {
-		height: 8.640625rem !important;
+		height: 26.25rem !important;
 	}
 	
 	.image-component.instance-9 > .frame {
 		height: 8.640625rem !important;
 	}
 	
+	.text-component.style-420 {
+		font-size: 2.5em;
+	}
+
 	.text-component.style-14 {
 		font-size: 2em;
 	}
@@ -5680,6 +6003,12 @@ body.touch .container-component.style-4 {
 		font-size: 1em;
 	}
 	
+	.container-component.style-420 > .wrapper > .inner {
+		--gutters: 2rem;
+		--padding-vertical: 1.59375rem;
+		--spacing: 1.5rem;
+	}
+
 	.container-component.style-3 > .wrapper > .inner {
 		--gutters: 4.5rem;
 		--padding-vertical: 1.59375rem;
